# Ehrenbot-1.0

./: .gitignore  cloud_to_local.py  export_from_cloud.py  import_to_local.py  main.py  manifest_to_mongo.py  pyproject.toml  requirements.txt  settings.py
dashboard/: app.py
dashboard/templates/: dashboard.html  index.html  login.html
data/: guardian_template.json  vendor_sale_item.json  weapon_stat_arrangement.json
data/1521263242/: project.json
ehrenbot/: __init__.py  bot.py  types.py
ehrenbot/cogs/: admin.py  announcer.py  channel_manager.py  clan_admin.py  guardian.py  luxembourg.py  member_manager.py  misc.py  owner.py  pokebattler.py  pokemon.py  registration.py  rotations.py  status.py  test.html  ticket.py  translator.py
ehrenbot/embeds/: pogo_upcoming_events.py  pokebattler_article.py
ehrenbot/utils/: exceptions.py  registration.py  ticket.py  utils_misc.py  utils_registration.py  utils_rotations.py  utils_status.py  utils_ticket.py  views.py  xur.py
ehrenbot/utils/rotations/: __init__.py  embeds.py  item_processing.py  shaders.py  vendor_data.py  vendor_rotation.py  xur.py
ehrenbot/utils/status/: __init__.py  api.py  group_v2.py  status.py  user.py  vendor.py
settings_files/: _global.py
