[tool.poetry]
name = "ehrenbot"
version = "0.1.0"
description = ""
authors = ["Sedam <sedam.code@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
destipy = "0.1.14"
pymongo = "^4.6.1"
python-dotenv = "^1.0.1"
py-cord = "^2.4.1"
pydantic = "^2.6.1"
pytz = "^2024.1"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
